--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ edition = "2018"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 itertools = "0.9.0"
+lazy_static = "1.4.0"
 rayon = "1.5.0"
+regex = "1.4.2"
