--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ edition = "2018"
 [dependencies]
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
+chrono = "0.4.19"
 itertools = "0.9.0"
 lazy_static = "1.4.0"
 rayon = "1.5.0"
 regex = "1.4.2"
+structopt = "0.3.21"
