--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ lazy_static = "1.4.0"
 rayon = "1.5.0"
 regex = "1.4.2"
 structopt = "0.3.21"
-define_main = { path = "./define_main" }
+paste = "1.0.3"
+seq-macro = "0.2.1"
