--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ structopt = "0.3.21"
 paste = "1.0.3"
 seq-macro = "0.2.1"
 curl = "0.4.34"
+async-std = { version = "1.8.0", features = ["attributes"] }
+futures = "0.3.8"
