Add parser for vm/instructions, rework day8 accordingly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ seq-macro = "0.2.1"
 curl = "0.4.34"
 async-std = { version = "1.8.0", features = ["attributes"] }
 futures = "0.3.8"
+nom = "6.0.1"
+thiserror = "1.0.22"
